Fix regression introduced by #26: title hidden by header

--- a/app/assets/stylesheets/get_involved.css.scss
+++ b/app/assets/stylesheets/get_involved.css.scss
@@ -4,7 +4,7 @@
   }
 
   .top_spacing {
-    margin-top: 5em;
+    padding-top: 5em;
   }
 
   .major_top_spacing {
